Format production multi-node info as a callout note
- Changed 'In production (multi-node):' section to blockquote note
- Added 💡 emoji for visual distinction
- Fixed NIXL reference (data-parallel workers don't transfer cache)
- Clarified that workers have local KV cache in this lab
- Makes production scaling info stand out without disrupting main flow

--- a/03-kv-aware-routing.ipynb
+++ b/03-kv-aware-routing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6d690a76",
+   "id": "a65d172e",
    "metadata": {},
    "source": [
     "# Lab 3: KV-Aware Routing with Data-Parallel Workers\n",
@@ -112,13 +112,15 @@
     "**In this lab (single node, 2 GPUs):**\n",
     "- Each GPU runs a separate worker\n",
     "- Router can direct requests to the worker with the best KV cache match\n",
-    "- NIXL can transfer cache data between workers on the same node\n",
+    "- Workers store their own local KV cache (no transfer between workers in data-parallel mode)\n",
     "\n",
-    "**In production (multi-node):**\n",
-    "- Scale workers across multiple nodes\n",
-    "- Scale frontends for high availability (multiple frontend replicas)\n",
-    "- NIXL transfers cache data between nodes over the network (RDMA/TCP)\n",
-    "- Kubernetes Services automatically load balance traffic across frontend replicas\n",
+    "> **💡 Note: Production Multi-Node Deployments**\n",
+    "> \n",
+    "> In production environments with multiple nodes:\n",
+    "> - Scale workers across nodes for higher throughput\n",
+    "> - Deploy multiple frontend replicas for high availability\n",
+    "> - Kubernetes Services automatically load balance across frontend replicas\n",
+    "> - KV-aware routing works across nodes via NATS coordination\n",
     "\n",
     "### When to Use KV-Aware Routing\n",
     "\n",
@@ -154,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "507ba1a6",
+   "id": "aa174baa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd202629",
+   "id": "0cdc9956",
    "metadata": {},
    "source": [
     "### Step 2: Install NATS with JetStream\n",
@@ -180,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "681938ff",
+   "id": "b4780840",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bea08ac6",
+   "id": "c056282c",
    "metadata": {},
    "source": [
     "**What this enables:**\n",
@@ -220,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51031397",
+   "id": "efb486da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +243,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3cce0f7",
+   "id": "a5397602",
    "metadata": {},
    "source": [
     "### Step 4: Test NATS Connectivity (Optional)"
@@ -250,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c586e27",
+   "id": "4d3e0e47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +267,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4435cdbf",
+   "id": "696400ed",
    "metadata": {},
    "source": [
     "---\n",
@@ -278,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91de0f35",
+   "id": "20b70897",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +307,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1d344ae",
+   "id": "5becee1c",
    "metadata": {},
    "source": [
     "---\n",
@@ -320,7 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13097e21",
+   "id": "9384cc88",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +345,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb5442be",
+   "id": "0b05cc1d",
    "metadata": {},
    "source": [
     "### Step 2: Clean Up Lab 1 Deployment (If Still Running)\n",
@@ -359,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0e630b9",
+   "id": "106e3ee1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +387,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f793613",
+   "id": "cc532272",
    "metadata": {},
    "source": [
     "### Step 3: Verify GPUs Are Available\n",
@@ -396,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf383e4c",
+   "id": "9d286c3a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +413,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fe0e5ef",
+   "id": "74c153f7",
    "metadata": {},
    "source": [
     "---\n",
@@ -443,7 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38eb5bba",
+   "id": "dca048ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,7 +531,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1a12acb",
+   "id": "b71cbe05",
    "metadata": {},
    "source": [
     "**Key Configuration Flags:**\n",
@@ -550,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bda87915",
+   "id": "39e8627b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -585,7 +587,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "760d6de0",
+   "id": "3f1f9fdb",
    "metadata": {},
    "source": [
     "### Step 3: Wait for Deployment"
@@ -594,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b702d346",
+   "id": "76003698",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -624,7 +626,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a12d1541",
+   "id": "71da92c8",
    "metadata": {},
    "source": [
     "### Step 4: Test Basic Inference"
@@ -633,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6104cb3",
+   "id": "2a5293c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,7 +660,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d42b7f2",
+   "id": "0fac1478",
    "metadata": {},
    "source": [
     "---\n",
@@ -673,7 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6846070",
+   "id": "cc43cbf3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -728,7 +730,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48afb6f5",
+   "id": "78310bc3",
    "metadata": {},
    "source": [
     "**Expected Behavior:**\n",
@@ -741,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e59afdc3",
+   "id": "666f71dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +763,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13a67772",
+   "id": "eb42c0e4",
    "metadata": {},
    "source": [
     "**What to look for:**\n",
@@ -775,7 +777,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50efbd16",
+   "id": "ce04ad68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -822,7 +824,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee048200",
+   "id": "692db80a",
    "metadata": {},
    "source": [
     "---\n",
@@ -912,7 +914,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b33c4b4",
+   "id": "f0d86b69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -943,7 +945,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbb7d8eb",
+   "id": "8aab3a24",
    "metadata": {},
    "source": [
     "**Note**: Cache hit/miss metrics depend on workload patterns. Even on a single node with multiple GPUs, KV-aware routing can improve cache hits by directing requests to the worker that already has relevant cache blocks.\n",
@@ -958,7 +960,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9755f16d",
+   "id": "ba505363",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -975,7 +977,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "502e3abb",
+   "id": "b6e71458",
    "metadata": {},
    "source": [
     "### Step 2: Verify Lab 1 Deployment is Still Running\n",
@@ -986,7 +988,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbe25833",
+   "id": "e7690583",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1011,7 +1013,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0cfd591d",
+   "id": "c514aa1e",
    "metadata": {},
    "source": [
     "---\n",
@@ -1043,7 +1045,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "465561c0",
+   "id": "ca81c5a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1066,7 +1068,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d45c066",
+   "id": "129bc2ff",
    "metadata": {},
    "source": [
     "### Workers Not Discovered"
@@ -1075,7 +1077,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25b8fed2",
+   "id": "2a5f473b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1099,7 +1101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7eb6a118",
+   "id": "844a9a11",
    "metadata": {},
    "source": [
     "### No Requests Reaching Workers"
@@ -1108,7 +1110,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f51dc6c6",
+   "id": "134fd75c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1132,7 +1134,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75346a26",
+   "id": "81eed3eb",
    "metadata": {},
    "source": [
     "### Understanding Cache Sharing with NIXL\n",
@@ -1273,7 +1275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8c31305",
+   "id": "c94d3c29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1308,7 +1310,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a612d31",
+   "id": "67b80720",
    "metadata": {},
    "source": [
     "### Step 2: Install etcd Coordination Layer\n",
@@ -1319,7 +1321,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7201434c",
+   "id": "846d73d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1351,7 +1353,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ea4b897",
+   "id": "6ac1b61f",
    "metadata": {},
    "source": [
     "### Step 3: Verify Infrastructure\n",
@@ -1362,7 +1364,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "208b4785",
+   "id": "26375a8b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1395,7 +1397,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7330fece",
+   "id": "6ec5193c",
    "metadata": {},
    "source": [
     "### Step 4: Enable Prometheus Monitoring (Optional)\n",
@@ -1406,7 +1408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04108354",
+   "id": "e1619b4c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1456,7 +1458,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77d08c24",
+   "id": "f59ee564",
    "metadata": {},
    "source": [
     "### Cleanup (NATS/etcd)\n",
@@ -1467,7 +1469,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c829c37d",
+   "id": "0b77d2df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1492,7 +1494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6dee2dae",
+   "id": "7f314dc2",
    "metadata": {},
    "source": [
     "### Configuring Dynamo to Use NATS/etcd\n",
