Remove repetitive 'Why NATS is Required' from Section 2
- Section 1 already explains why NATS is needed and how it works
- Replaced verbose explanation with brief transition sentence
- Section 2 now focuses on deployment steps
- Removed ~11 lines of duplicate NATS explanation

--- a/03-kv-aware-routing.ipynb
+++ b/03-kv-aware-routing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b5b37df6",
+   "id": "da6b7de2",
    "metadata": {},
    "source": [
     "# Lab 3: KV-Aware Routing with Data-Parallel Workers\n",
@@ -126,17 +126,7 @@
     "\n",
     "## Section 2: Deploy NATS for Cache Coordination\n",
     "\n",
-    "### Why NATS is Required\n",
-    "\n",
-    "KV-aware routing requires **NATS** (Neural Autonomic Transport System) to coordinate cache state across workers. This is fundamentally different from Lab 1, which used direct worker communication.\n",
-    "\n",
-    "**What NATS Does:**\n",
-    "- Workers publish cache events (\"I stored block X\", \"I removed block Y\")\n",
-    "- Router subscribes to these events to maintain a global cache index\n",
-    "- Low-latency pub/sub messaging (< 1ms typically)\n",
-    "- Handles thousands of events per second\n",
-    "\n",
-    "**Without NATS**: Router has no visibility into worker cache state → random routing → poor cache hit rates\n",
+    "Now that you understand how KV-aware routing works, let's deploy NATS to enable cache coordination between workers and the router.\n",
     "\n",
     "### Step 1: Add NATS Helm Repository"
    ]
@@ -144,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9d413a6",
+   "id": "4beacab9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5363799d",
+   "id": "df1cec47",
    "metadata": {},
    "source": [
     "### Step 2: Install NATS with JetStream\n",
@@ -170,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eeec718e",
+   "id": "ca337dc5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4dbf046",
+   "id": "f532d31c",
    "metadata": {},
    "source": [
     "**What this enables:**\n",
@@ -210,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1c192b3",
+   "id": "c6b376b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +221,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b0c27a7",
+   "id": "d2422e31",
    "metadata": {},
    "source": [
     "### Step 4: Test NATS Connectivity (Optional)"
@@ -240,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6e4e777",
+   "id": "b056e981",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0761265b",
+   "id": "ad532bc9",
    "metadata": {},
    "source": [
     "---\n",
@@ -268,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8051f7c4",
+   "id": "b596d425",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +285,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "170e78ca",
+   "id": "23f2d9b4",
    "metadata": {},
    "source": [
     "---\n",
@@ -310,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8e1f108",
+   "id": "4b9daafd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +323,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e855f8c6",
+   "id": "317bea91",
    "metadata": {},
    "source": [
     "### Step 2: Clean Up Lab 1 Deployment (If Still Running)\n",
@@ -349,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a8eb906",
+   "id": "58b2d776",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +365,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d17e531",
+   "id": "74295381",
    "metadata": {},
    "source": [
     "### Step 3: Verify GPUs Are Available\n",
@@ -386,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e6ea923",
+   "id": "8c371662",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +391,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "048c020f",
+   "id": "8161a0b7",
    "metadata": {},
    "source": [
     "---\n",
@@ -433,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "614c9662",
+   "id": "8f5eb8df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,7 +509,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e7db59b",
+   "id": "3ee911e4",
    "metadata": {},
    "source": [
     "**Key Configuration Flags:**\n",
@@ -540,7 +530,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab444aef",
+   "id": "f9105812",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,7 +565,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4737f459",
+   "id": "18cf9d01",
    "metadata": {},
    "source": [
     "### Step 3: Wait for Deployment"
@@ -584,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a352ef1d",
+   "id": "f4de1f63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,7 +604,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a38b5060",
+   "id": "1196a8b2",
    "metadata": {},
    "source": [
     "### Step 4: Test Basic Inference"
@@ -623,7 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb008c3e",
+   "id": "cdce25df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,7 +638,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "431281f5",
+   "id": "51e87661",
    "metadata": {},
    "source": [
     "---\n",
@@ -663,7 +653,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77527bdf",
+   "id": "13f4c570",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -718,7 +708,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cec8b686",
+   "id": "9fa3a796",
    "metadata": {},
    "source": [
     "**Expected Behavior:**\n",
@@ -731,7 +721,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2ea39e4",
+   "id": "7bac662d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -751,7 +741,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78c1e69e",
+   "id": "afd8b61f",
    "metadata": {},
    "source": [
     "**What to look for:**\n",
@@ -765,7 +755,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "090a5438",
+   "id": "533760d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -812,7 +802,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d57a66f9",
+   "id": "2834dac3",
    "metadata": {},
    "source": [
     "---\n",
@@ -902,7 +892,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79facad5",
+   "id": "cbe83210",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -933,7 +923,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9d89302",
+   "id": "e41f124b",
    "metadata": {},
    "source": [
     "**Note**: Cache hit/miss metrics depend on workload patterns. Even on a single node with multiple GPUs, KV-aware routing can improve cache hits by directing requests to the worker that already has relevant cache blocks.\n",
@@ -948,7 +938,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d4a5494",
+   "id": "4e877bba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -965,7 +955,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "470c0b30",
+   "id": "ba243fbe",
    "metadata": {},
    "source": [
     "### Step 2: Verify Lab 1 Deployment is Still Running\n",
@@ -976,7 +966,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eebe4080",
+   "id": "077322f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1001,7 +991,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc166e1f",
+   "id": "202dccbd",
    "metadata": {},
    "source": [
     "---\n",
@@ -1033,7 +1023,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aadc16da",
+   "id": "e9a77e96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1056,7 +1046,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "604c3490",
+   "id": "9357ed21",
    "metadata": {},
    "source": [
     "### Workers Not Discovered"
@@ -1065,7 +1055,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60ea8a90",
+   "id": "12966ccb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1089,7 +1079,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fca2b96",
+   "id": "1cac9559",
    "metadata": {},
    "source": [
     "### No Requests Reaching Workers"
@@ -1098,7 +1088,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec5654e0",
+   "id": "84fd6e43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1122,7 +1112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e25288ef",
+   "id": "d19ce81d",
    "metadata": {},
    "source": [
     "### Understanding Cache Sharing with NIXL\n",
@@ -1263,7 +1253,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d4c536b",
+   "id": "4154a636",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1298,7 +1288,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "514a087f",
+   "id": "44458c88",
    "metadata": {},
    "source": [
     "### Step 2: Install etcd Coordination Layer\n",
@@ -1309,7 +1299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b808fbc1",
+   "id": "59ed48dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1341,7 +1331,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44d94408",
+   "id": "6be32283",
    "metadata": {},
    "source": [
     "### Step 3: Verify Infrastructure\n",
@@ -1352,7 +1342,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb2ccc0e",
+   "id": "d2dd45c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1385,7 +1375,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a49fd443",
+   "id": "b283fdd7",
    "metadata": {},
    "source": [
     "### Step 4: Enable Prometheus Monitoring (Optional)\n",
@@ -1396,7 +1386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f653070d",
+   "id": "a18096cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1446,7 +1436,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad2d58f7",
+   "id": "b45d04eb",
    "metadata": {},
    "source": [
     "### Cleanup (NATS/etcd)\n",
@@ -1457,7 +1447,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9245f831",
+   "id": "8a059e42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1482,7 +1472,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d13fd91d",
+   "id": "cb95dcac",
    "metadata": {},
    "source": [
     "### Configuring Dynamo to Use NATS/etcd\n",
