Clarify Lab 1 cleanup wording - deleting deployment, not entire lab
- Changed 'Clean Up Lab 1 Deployment' → 'Delete Lab 1 Deployment'
- Changed 'Lab 1 deployment' → 'Lab 1 model deployment' for clarity
- Changed 'cleaning up Lab 1' → 'deleting Lab 1's deployment'
- Makes it clear we're only deleting the DynamoGraphDeployment, not CRDs/platform/namespace

--- a/03-kv-aware-routing.ipynb
+++ b/03-kv-aware-routing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2345079f",
+   "id": "aafdd09e",
    "metadata": {},
    "source": [
     "# Lab 3: KV-Aware Routing with Data-Parallel Workers\n",
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "644e5ca6",
+   "id": "27c2ae0c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fe9929e",
+   "id": "cb6f1fbe",
    "metadata": {},
    "source": [
     "### Step 2: Install NATS with JetStream\n",
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa48337c",
+   "id": "f5e86383",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ea3c2de",
+   "id": "0fb6135b",
    "metadata": {},
    "source": [
     "### Step 3: Verify NATS Deployment"
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72610103",
+   "id": "6dc8f741",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96ac8f6e",
+   "id": "d78bc249",
    "metadata": {},
    "source": [
     "### Step 4: Test NATS Connectivity (Optional)"
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "418fa933",
+   "id": "0cc96068",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7efb4946",
+   "id": "772a3ed6",
    "metadata": {},
    "source": [
     "---\n",
@@ -253,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1efa2f6e",
+   "id": "aea115c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,22 +280,26 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45f98d71",
+   "id": "0e0b8adc",
    "metadata": {},
    "source": [
     "---\n",
     "\n",
-    "## Pre-Deployment: Check GPU Availability\n",
-    "\n",
-    "**⚠️ CRITICAL**: Lab 3 requires GPUs for data-parallel workers. Before proceeding, verify you have sufficient GPU resources available.\n",
-    "\n",
+    "## Pre-Deployment: Check GPU Availability"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4572cfc3",
+   "metadata": {},
+   "source": [
     "### Step 1: Check Current GPU Usage"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87cfa329",
+   "id": "68bd9812",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,23 +322,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d917eee7",
+   "id": "02ea9ee5",
    "metadata": {},
    "source": [
-    "### Step 2: Clean Up Lab 1 Deployment (If Still Running)\n",
+    "### Step 2: Delete Lab 1 Deployment (If Still Running)\n",
     "\n",
-    "**⚠️ WARNING**: If Lab 1 deployment is still running, you MUST delete it first to free GPUs for Lab 3.\n",
+    "**⚠️ WARNING**: If the Lab 1 model deployment is still running, you MUST delete it first to free GPUs for Lab 3.\n",
     "\n",
-    "Lab 3 deployment requires:\n",
+    "Lab 3 requires:\n",
     "- **2 GPUs** for 2 data-parallel workers (1 GPU each)\n",
     "\n",
-    "If you have only 2 GPUs total and Lab 1 is using them, run this cleanup:"
+    "If you have only 2 GPUs total and Lab 1's deployment is using them, delete it:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85011445",
+   "id": "19120800",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,18 +364,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a373bd7",
+   "id": "f5b2f0ef",
    "metadata": {},
    "source": [
     "### Step 3: Verify GPUs Are Available\n",
     "\n",
-    "After cleaning up Lab 1 (if needed), verify GPUs are free:"
+    "After deleting Lab 1's deployment (if needed), verify GPUs are free:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c162f920",
+   "id": "2ce38142",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +390,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9506b500",
+   "id": "c1f1940b",
    "metadata": {},
    "source": [
     "---\n",
@@ -418,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ae0a5a4",
+   "id": "c9c560fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +508,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2af5c2bb",
+   "id": "04975482",
    "metadata": {},
    "source": [
     "**Key Configuration Flags:**\n",
@@ -525,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a4539a4",
+   "id": "c630c81b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,7 +564,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1312b111",
+   "id": "f3e930fa",
    "metadata": {},
    "source": [
     "### Step 3: Wait for Deployment"
@@ -569,7 +573,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96dee8f6",
+   "id": "d35b711e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f4c2982",
+   "id": "dfea04ee",
    "metadata": {},
    "source": [
     "### Step 4: Test Basic Inference"
@@ -608,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a023f472",
+   "id": "10ee8dd5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -633,7 +637,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3f97db2",
+   "id": "eae56bc3",
    "metadata": {},
    "source": [
     "---\n",
@@ -648,7 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8cbcd83",
+   "id": "9c4f511a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -703,7 +707,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de9479a4",
+   "id": "9d4835bc",
    "metadata": {},
    "source": [
     "**Expected Behavior:**\n",
@@ -716,7 +720,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24ebda4d",
+   "id": "269b6a6e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -736,7 +740,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a517876",
+   "id": "336d54e2",
    "metadata": {},
    "source": [
     "**What to look for:**\n",
@@ -750,7 +754,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7e7135d",
+   "id": "36d2ff2e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -797,7 +801,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "705ee22a",
+   "id": "98171e32",
    "metadata": {},
    "source": [
     "---\n",
@@ -887,7 +891,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9069f46a",
+   "id": "0986672e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -918,7 +922,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ec6f467",
+   "id": "87692c3e",
    "metadata": {},
    "source": [
     "**Note**: Cache hit/miss metrics depend on workload patterns. Even on a single node with multiple GPUs, KV-aware routing can improve cache hits by directing requests to the worker that already has relevant cache blocks.\n",
@@ -933,7 +937,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b5c411b",
+   "id": "f2d75d6a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -950,7 +954,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbbce935",
+   "id": "468256ef",
    "metadata": {},
    "source": [
     "### Step 2: Verify Lab 1 Deployment is Still Running\n",
@@ -961,7 +965,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45b639fc",
+   "id": "40f85657",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -986,7 +990,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "341e3507",
+   "id": "b7b8f55e",
    "metadata": {},
    "source": [
     "---\n",
@@ -1018,7 +1022,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2645e8c6",
+   "id": "946fe3e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1041,7 +1045,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c8c6203",
+   "id": "4c0fe8ab",
    "metadata": {},
    "source": [
     "### Workers Not Discovered"
@@ -1050,7 +1054,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8fdc0052",
+   "id": "7c864c57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1074,7 +1078,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0c8efc3",
+   "id": "6b0eaffd",
    "metadata": {},
    "source": [
     "### No Requests Reaching Workers"
@@ -1083,7 +1087,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08fa184d",
+   "id": "20928f0d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1107,7 +1111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c926dfd6",
+   "id": "58a033a2",
    "metadata": {},
    "source": [
     "### Understanding Cache Sharing with NIXL\n",
@@ -1248,7 +1252,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9de2abee",
+   "id": "ae9182a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1283,7 +1287,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a310488",
+   "id": "c67b805c",
    "metadata": {},
    "source": [
     "### Step 2: Install etcd Coordination Layer\n",
@@ -1294,7 +1298,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67a6f072",
+   "id": "a2b12437",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1326,7 +1330,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4dcf86e7",
+   "id": "60017c7b",
    "metadata": {},
    "source": [
     "### Step 3: Verify Infrastructure\n",
@@ -1337,7 +1341,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d0db147",
+   "id": "c031f3ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1370,7 +1374,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a94d55f9",
+   "id": "9dec8b04",
    "metadata": {},
    "source": [
     "### Step 4: Enable Prometheus Monitoring (Optional)\n",
@@ -1381,7 +1385,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45525bfa",
+   "id": "5713912c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1431,7 +1435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b75bec65",
+   "id": "bf98d2d1",
    "metadata": {},
    "source": [
     "### Cleanup (NATS/etcd)\n",
@@ -1442,7 +1446,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0331dc0",
+   "id": "e8c6e334",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1467,7 +1471,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62637f33",
+   "id": "07300ae5",
    "metadata": {},
    "source": [
     "### Configuring Dynamo to Use NATS/etcd\n",
